--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>스누버스 - 학내 셔틀버스, 시내버스 위치 알림</title>
+
+    <meta name="keywords" content="서울대학교,서울대,버스,시내버스,광역버스,간선버스,지선버스,셔틀버스,셔틀,순환셔틀,낙성대셔틀,야간셔틀,심야셔틀,통학셔틀,광역셔틀,윗공대,학생회관,행정관,5511,5513,5515,501,506,6515,5517,5528,6512,6513,6514,651,750A,750B,6511,5516,관악02,N61,N15,서울대입구,설입,입구역,낙성대,낙성대역">
+    <meta name="description" content="순환셔틀, 광역셔틀, 통학셔틀의 시간표를 확인할 수 있고 심지어 시내버스(지선, 간선), 심야버스도 지원해요!! 버스들의 실시간 위치 확인은 곧 추가될 예정입니다!! by 서울대학교 버스 알림 서비스 샤틀">
+    <meta property="og:title"           content="서울대학교 버스 알림 서비스 - 샤틀"/>
+    <meta property="og:site_name"       content="서울대학교 버스 알림 서비스 - 샤틀"/>
+    <meta property="og:type"            content="website"/>
+    <meta property="og:url"             content="http://shattle.kr"/>
+    <meta property="og:image"           content="http://api.shattle.kr/featured.jpg"/>
+    <meta property="og:description"     content="순환셔틀, 광역셔틀, 통학셔틀의 시간표를 확인할 수 있고 심지어 시내버스(지선, 간선), 심야버스도 지원해요!! 버스들의 실시간 위치 확인은 곧 추가될 예정입니다!! by 서울대학교 버스 알림 서비스 샤틀"/>
+
     <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
@@ -70,4 +80,12 @@
     -->
     <ion-nav-view></ion-nav-view>
   </body>
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.3&appId=1659691320918847";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 </html>
